# mfs-watch

./: .gitignore  README.md  pyproject.toml
mfs_watch/: __init__.py  app.py  store.py
