[project]
name = "mfs-watch"
version = "0.1.0"
description = "Real-time TUI dashboard for a local mfs-server"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Cheney Zhang" }]
dependencies = [
    "textual>=0.83",   # TUI framework
    "httpx>=0.27",     # async HTTP for /v1/status
]

[project.scripts]
mfs-watch = "mfs_watch:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mfs_watch"]
